# actix-web-rest-api-boilerplate

./: .env-example  .env.test  Cargo.toml  LICENSE  Makefile  README.md  memo.md
migrations/2021-04-08-121346_create_companies/: down.sql  up.sql
migrations/2021-04-08-125602_create_users/: up.sql
src/: db.rs  error.rs  lib.rs  main.rs  schema.rs  server.rs
src/apps/: mod.rs  user.rs
src/apps/companies/: models.rs  views.rs
src/apps/user/: models.rs  views.rs
src/apps/users/: models.rs  views.rs
src/db/: connection.rs  mod.rs  pagination.rs
tests/: entry_test.rs
tests/apps/: health_check.rs  mod.rs
tests/apps/companies/: mod.rs  views_test.rs
