[package]
name = "actix-sample"
version = "0.1.0"
authors = ["Takehiro Ohtani <isit7a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.13"
serde = "1.0.125"
serde_json = "1.0.64"