[package]
name = "actix-web3-rest-api-boilerplate"
version = "0.1.0"
authors = ["Takehiro Ohtani <isit7a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.13"
log = "0.4.14"
once_cell = "1.7.2"
serde = "1.0.125"
serde_json = "1.0.64"