[package]
name = "actix-web3-rest-api-boilerplate"
version = "0.1.0"
authors = ["Takehiro Ohtani <isit7a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "lib"

[[bin]]
path = "src/bin/main.rs"
name = "main"

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
log = "0.4.14"
num_cpus = "1.13.0"
once_cell = "1.7.2"
serde = "1.0.125"
serde_json = "1.0.64"

[dev-dependencies]
actix-rt = "1.1.1"
ctor = "0.1.20"